--- a/index.html
+++ b/index.html
@@ -30,9 +30,16 @@
         <div class="hourly" id="hourlyForecast"></div>
         <h2>5-Day Forecast</h2>
         <div class="five-day" id="fiveDayForecast"></div>
-        <footer>
-            <p>Made for Project 2025 &copy; Weather Dashboard</p>
-        </footer>
+        
+		
+		<footer>
+  <p>
+    &copy; 2025 Weather Dashboard. Developed by Sandhya Belavi.
+    <br />
+    Powered by <a href="https://openweathermap.org/api" target="_blank" rel="noopener noreferrer">OpenWeatherMap API</a>.
+  </p>
+</footer>
+
     </div>
     <script src="script.js"></script>
 </body>
